--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"lint": "eslint src --ext .ts",
 		"type-check": "tsc --noEmit",
 		"ngrok": "ngrok http 3000",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"sam:build": "sam build",
 		"sam:local": "sam local start-api",
 		"sam:deploy": "sam deploy --guided"
@@ -24,6 +26,7 @@
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.0",
 		"tsx": "^4.7.0",
-		"typescript": "^5.5.2"
+		"typescript": "^5.5.2",
+		"vitest": "^2.1.8"
 	}
 }
